Tad bit more config work

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 ### Ignore .env and certificates
 .env
 server/certs/
+server/config.yaml
 
 ### Python template
 # Byte-compiled / optimized / DLL files
